crates/data_privacy_macros_impl/tests/snapshots/derive__redacted_to_string_multiple_named.snap
---
source: crates/data_privacy_macros_impl/tests/derive.rs
assertion_line: 124
expression: pretty
---
impl ::data_privacy::RedactedToString for EmailAddress {
    fn to_string(
        &self,
        engine: &::data_privacy::RedactionEngine,
    ) -> ::std::string::String {
        let mut result = ::std::string::String::from("EmailAddress {{");
        result.push_str(&::std::format!(" {}: ", "x"));
        result
            .push_str(
                &<String as ::data_privacy::RedactedToString>::to_string(&self.x, engine),
            );
        result.push_str(&::std::format!(", {}: ", "y"));
        result
            .push_str(
                &<String as ::data_privacy::RedactedToString>::to_string(&self.y, engine),
            );
        result.push_str(" }}");
        result
    }
}
